k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend
    color: blue
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
